@@ -280,6 +280,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #17099: Have importlib.find_loader() raise ValueError when __loader__
+  is not set, harmonizing with what happens when the attribute is set to None.
+
 - Expose the O_PATH constant in the os module if it is available.
 
 - Issue #17368: Fix an off-by-one error in the Python JSON decoder that caused
